--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Sample</title>
-        <link rel="stylesheet" href="C:\Users\VIJAYALAKSHMI\Desktop\sample\style.css">
+        <link rel="stylesheet" href="C:\Users\VIJAYALAKSHMI\Desktop\sample\css\style.css">
     </head>
     <body>
         <header>
